# thunderdome

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl
.github/workflows/: ci.yml
benches/: primary.rs
benchmark/: Cargo.toml
benchmark/benches/: primary.rs
comparison/: Cargo.toml
comparison/src/: main.rs
src/: arena.rs  drain.rs  drain_filter.rs  feature_serde.rs  free_pointer.rs  generation.rs  index.rs  into_iter.rs  iter.rs  iter_mut.rs  iterators.rs  lib.rs
src/iter/: drain.rs  into_iter.rs  iter.rs  iter_mut.rs  mod.rs
