[package]
name = "thunderdome"
description = "Fast arena allocator with compact generational indices"
version = "0.5.1"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
documentation = "https://docs.rs/thunderdome"
homepage = "https://github.com/LPGhatguy/thunderdome"
repository = "https://github.com/LPGhatguy/thunderdome"
readme = "README.md"
keywords = ["arena", "slab", "generational"]
license = "MIT OR Apache-2.0"

[workspace]
members = ["comparison"]

[[bench]]
name = "primary"
harness = false

[dev-dependencies]
criterion = "0.3.6"
rand = "0.8.5"
